[gd_scene load_steps=6 format=2]

[ext_resource path="res://Level.gd" type="Script" id=1]
[ext_resource path="res://Asset/SansitaSwashed-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Asset/mountain_full_background1.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 512, 40 )

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="UI"]
margin_left = 896.0
margin_right = 1024.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="CanvasLayer" parent="."]
layer = -128

[node name="TextureRect" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spawner" type="Position2D" parent="."]
position = Vector2( 128, 64 )

[node name="Spawner2" type="Position2D" parent="."]
position = Vector2( 320, 64 )

[node name="Spawner3" type="Position2D" parent="."]
position = Vector2( 512, 64 )

[node name="Spawner4" type="Position2D" parent="."]
position = Vector2( 704, 64 )

[node name="Spawner5" type="Position2D" parent="."]
position = Vector2( 896, 64 )

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 0, 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 512, 544 )
shape = SubResource( 2 )
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
